# chirp

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  DISTRIBUTED_CHANGES.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  README.md  TODO.md  docker-compose.cluster.yml  docker-compose.yml  gen_proto.sh  package.json  test_services.sh  vcpkg.json
.github/workflows/: ci.yml  cmake-multi-platform.yml  docs.yml  mobile-build.yml
apps/admin_dashboard/: index.html  package.json
apps/cli_client/: CMakeLists.txt
apps/load_tester/: CMakeLists.txt
apps/load_tester/src/: load_tester.cc  load_tester.h  main.cc
apps/mobile_companion/: pubspec.yaml
cmake/: FindMySQL.cmake  ios.cmake  linux-gcc.cmake
deploy/: deploy-cluster.sh  haproxy.cfg
deploy/k8s/: chat-deployment.yaml  gateway-deployment.yaml  redis-cluster.yaml
docker/: Dockerfile.service  docker-entrypoint.sh
docs/: API.md  CAPABILITY_MATRIX.md  CORE.md  DEPLOYMENT.md  DISTRIBUTED_DEPLOYMENT.md  INTEGRATION_TEST_FIXES.md  QUICKSTART.md  README.md  SCALABILITY.md  SCALABILITY_CHAT_IMPLEMENTATION.md  SCALABILITY_SUMMARY.md  architecture.md  game_chat_architecture.md  game_chat_features.md  game_combat_best_practices.md  index.md  npc_dialog_system.md  package.json
docs/.vitepress/: config.mjs
libs/common/: CMakeLists.txt  base64.cc  base64.h  config.cc  config.h  constants.h  error_code.h  jwt.cc  jwt.h  logger.cc  logger.h  sha256.cc  sha256.h  time_utils.h
libs/common/include/common/: metrics.h  metrics_http_server.h
libs/common/src/: metrics.cc  metrics_http_server.cc
libs/network/: CMakeLists.txt  byte_order.h  length_prefixed_framer.cc  length_prefixed_framer.h  message_router.cc  message_router.h  packet_helpers.h  protobuf_framing.cc  protobuf_framing.h  redis_client.cc  redis_client.h  redis_protocol.cc  redis_protocol.h  session.h  tcp_client.cc  tcp_client.h  tcp_server.cc  tcp_server.h  tcp_session.cc  tcp_session.h  websocket_client.cc  websocket_client.h  websocket_frame.cc  websocket_frame.h  websocket_server.cc  websocket_server.h  websocket_session.cc  websocket_session.h  websocket_util.cc  websocket_util.h  websocket_utils.h
proto/: CMakeLists.txt  auth.proto  chat.proto  common.proto  gateway.proto  notification.proto  social.proto  voice.proto
proto/cpp/proto/: auth.pb.cc  auth.pb.h  chat.pb.cc  chat.pb.h  common.pb.cc  common.pb.h  gateway.pb.cc  gateway.pb.h  notification.pb.cc  notification.pb.h  social.pb.cc  social.pb.h  voice.pb.cc  voice.pb.h
proto/go/proto/: auth.pb.go  chat.pb.go  common.pb.go  gateway.pb.go
scripts/: build-cluster.sh  build_and_test.sh  init_db.sql  validate.sh  validate_simple.sh
sdks/core/: CMakeLists.txt  README.md
sdks/core/examples/: sdk_example.cc
sdks/core/include/chirp/: sdk.h  sdk_client.h
sdks/core/include/chirp/core/: client.h  config.h  events.h  sdk.h
sdks/core/include/chirp/core/modules/chat/: chat_events.h  chat_module.h
sdks/core/include/chirp/core/modules/social/: social_events.h  social_module.h
sdks/core/include/chirp/core/modules/voice/: voice_events.h  voice_module.h  webrtc_client.h
sdks/core/scripts/: build_all.bat  build_all.sh
sdks/core/src/: client_impl.cc  client_impl.h  core_sdk.cc  sdk.cc  sdk_client.cc
sdks/core/src/modules/chat/: chat_module_impl.cc  chat_module_impl.h
sdks/core/src/modules/social/: social_module_impl.cc  social_module_impl.h
sdks/core/src/modules/voice/: voice_module_impl.cc  voice_module_impl.h  webrtc_client.cc
sdks/unity/Native/: CMakeLists.txt
sdks/unity/Native/include/: chirp_unity_bridge.h
sdks/unity/Native/src/: chirp_unity_bridge.cc
services/auth/: CMakeLists.txt
services/auth/src/: auth_service.cc  auth_service.h  brute_force_protector.cc  brute_force_protector.h  main.cc  main_enhanced.cc  password_hasher.cc  password_hasher.h  rate_limiter.cc  rate_limiter.h  redis_auth_store.cc  redis_auth_store.h  session_store.cc  session_store.h  token_generator.cc  token_generator.h  user_store.cc  user_store.h
services/chat/: CMakeLists.txt
services/chat/src/: channel_manager.cc  channel_manager.h  chat_session_registry.cc  chat_session_registry.h  chat_validation.cc  chat_validation.h  distributed_dispatch.cc  distributed_dispatch.h  distributed_runtime.cc  distributed_runtime.h  file_storage_manager.cc  file_storage_manager.h  group_manager.cc  group_manager.h  hybrid_message_store.cc  hybrid_message_store.h  main.cc  main_distributed.cc  main_enhanced.cc  mention_manager.cc  mention_manager.h  message_delivery_tracker.cc  message_delivery_tracker.h  message_edit_manager.cc  message_edit_manager.h  message_migration_worker.cc  message_migration_worker.h  message_store_config.cc  message_store_config.h  mysql_message_store.cc  mysql_message_store.h  paginated_history_retriever.cc  paginated_history_retriever.h  reaction_manager.cc  reaction_manager.h  read_receipt_manager.cc  read_receipt_manager.h  runtime_utils.cc  runtime_utils.h  typing_manager.cc  (+1 more)
services/gateway/: CMakeLists.txt
services/gateway/src/: auth_client.cc  auth_client.h  gateway_session_registry.cc  gateway_session_registry.h  main.cc  redis_session_manager.cc  redis_session_manager.h
services/notification/: CMakeLists.txt
services/notification/src/: main.cc  notification_service.cc  notification_service.h
services/search/: CMakeLists.txt
services/search/src/: main.cc  message_search_service.cc  message_search_service.h
services/social/: CMakeLists.txt
services/social/src/: main.cc  presence_manager_v2.cc  presence_manager_v2.h
tests/: CMakeLists.txt  INTEGRATION_TESTS_SUMMARY.md  run_integration_tests.sh
tests/integration/: CMakeLists.txt  demo_test_framework.sh  integration_test.cc
tests/unit/: CMakeLists.txt  chat_validation_test.cc  common_test.cc  gateway_session_registry_test.cc  network_test.cc
tools/: archive_chat_redis.sh  archive_chat_redis_loop.sh
tools/benchmark/: CMakeLists.txt  chat_history_client.cc  chat_listen_client.cc  chat_mysql_exporter.cc  chat_send_client.cc  login_client.cc  ping_client.cc  ws_login_client.cc  ws_ping_client.cc
(+49 files in other folders)
